infrastructure/k8s/otel-collector.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otel-collector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: otel-collector
  template:
    metadata:
      labels:
        app: otel-collector
    spec:
      containers:
      - name: otel-collector
        image: grafana/otel-lgtm:latest
        ports:
        - containerPort: 4318  # Port for OTLP (OpenTelemetry Protocol)
        - containerPort: 4317
        - containerPort: 3000  # Grafana UI
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
