infrastructure/k8s/otel-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otel-collector
spec:
  selector:
    app: otel-collector
  ports:
  - name: grafana
    protocol: TCP
    port: 3000
    targetPort: 3000
  - name: otel-grpc
    protocol: TCP
    port: 4317
    targetPort: 4317
  - name: otel-http
    protocol: TCP
    port: 4318
    targetPort: 4318
  type: LoadBalancer
