infrastructure/k8s/todo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-service
spec:
  selector:
    app: todo-service
  ports:
    - protocol: TCP
      port: 80           # Port exposed by the service
      targetPort: 8082   # Port your application listens on
